[metadata]
name = plateauutils
auther = Taro Matsuzawa
auther_email = taro@georepublic.co.jp
license = MIT
long_description = file: README.rst
url = https://github.com/eukarya-inc/plateauutils
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Enviroment :: Console
    Programming Language :: Python

[options]
requires_python = >=3.9
packages = tracking_objects
install_requires =
    click
    shapely
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    plateauutils = plateauutils.cli:main
